--- a/style.css
+++ b/style.css
@@ -7,10 +7,10 @@ body.index {
 
 body.detail{
   background-color: #c9faff;
-/* background: linear-gradient(-45deg, #0095ff, #6bbfff, #99f3ff, #7dffe5, #8fffe3);
+background: linear-gradient(-45deg, #0095ff, #6bbfff, #99f3ff, #7dffe5, #8fffe3);
 	background-size: 400% 400%;
 	animation: gradient 15s ease infinite;
-	height: 100vh; */
+	height: 100vh;
 }
 #aquarium {
   position: relative;
