--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ background: linear-gradient(-45deg, #0095ff, #6bbfff, #99f3ff, #7dffe5, #8fffe3)
 #aquarium {
   position: relative;
   width: 100%;
-  height: 100%;   /* test sizing */
+  height: 400px;   /* test sizing */
   overflow: hidden;
   background: url('water-background.jpg') no-repeat center;
   background-size: cover;
