--- a/style.css
+++ b/style.css
@@ -21,10 +21,15 @@ background: linear-gradient(-45deg, #0095ff, #6bbfff, #99f3ff, #7dffe5, #8fffe3)
   background-size: cover;
 }
 
-#icon {
+.icon {
   position: absolute;
-  width: 120px;
-  transition: transform 0.5s linear;
+  width: 80px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: transform 0.2s linear;
+  will-change: transform;
+	
 }
 @keyframes gradient {
 	0% {
