Change font-family of paragraphs to Courier New

--- a/style.css
+++ b/style.css
@@ -173,7 +173,7 @@ img.icon{
   height: 500px;
 }
 p{
-  font-family: Marker Felt, fantasy;
+  font-family: "Courier New", monospace;
   font-size: 20px;
   font-weight: bold;
 }
