--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ img.icon{
 .mainTitle{
   text-align: center;
   color: white;
-  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-family: "Marker Felt", fantasy;
   font-weight: 900;
   font-size: 50px;
 }
