--- a/style.css
+++ b/style.css
@@ -62,8 +62,7 @@ img.icon{
 .subTitle{
   text-align: center;
   color: white;
-  font-family: Georgia, 'Times New Roman', Times, serif;
-  font-weight: 900;
+font-family: "Marker Felt", fantasy;  font-weight: 900;
   font-size: 20px;
 }
 
