--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ font-family: "Marker Felt", fantasy;  font-weight: 900;
 
 
 #detailBanner{
-  object-fit: cover;
+  object-fit: 80%;
   width: 100%;
   height: 15%;
 }
