--- a/style.css
+++ b/style.css
@@ -108,7 +108,10 @@ font-family: "Marker Felt", fantasy;  font-weight: 900;
 	bottom: 5px;
 	right: 75px;
 }
-
+#blueCaribbeanFish{
+  right: 170px;
+  bottom: 250px;
+}
 #detailBanner{
   object-fit: cover;
   width: 100%;
