--- a/style.css
+++ b/style.css
@@ -121,10 +121,13 @@ font-family: "Marker Felt", fantasy;  font-weight: 900;
 	right: 60px;
 }
 
-#detailBanner{
-  object-fit: cover;
-  width: 100%;
-  height: 15%;
+body.detail #detailBanner {
+    width: 100%;
+    max-height: 60vh;
+    height: auto;
+    object-fit: contain;
+    display: block;
+    margin: 0 auto;
 }
 #detailTitle{
   color: white;
