Change backBtn color to white

--- a/style.css
+++ b/style.css
@@ -256,7 +256,7 @@ p{
     display: inline-block;
     margin-top: 20px;
     text-decoration: none;
-    color: #00b3ad;
+    color: white;
     font-weight: bold;
     font-size: 24px;
 }
