--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@ font-family: "Marker Felt", fantasy;  font-weight: 900;
  right: 160px;
  bottom: 225px;
 }
-#blackLong-spinedUrchin{
+#blackLongSpinedUrchin{
 	bottom: 5px;
 	right: 60px;
 }
