--- a/style.css
+++ b/style.css
@@ -98,6 +98,7 @@ font-family: "Marker Felt", fantasy;  font-weight: 900;
 #astraeaTurboSnail{
   bottom: 5px;
   right: 130px;
+  z-index: 10;
 }
 #seaCucumber{
 	bottom: 5px;
