--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ font-family: "Marker Felt", fantasy;  font-weight: 900;
 }
 #blackLongSpinedUrchin{
 	bottom: 5px;
-	right: 50%;
+	right: 400px;
 	z-index: 10;
 	
 }
