--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body.index {
-  background-image: url("images/oceanBg.jpeg");
+  background-image: url("oceanbackground.jpg");
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
@@ -21,7 +21,7 @@ background: linear-gradient(-45deg, #0095ff, #6bbfff, #99f3ff, #7dffe5, #8fffe3)
   width: 100%;
   height: 400px;  /* test sizing */
   overflow: hidden;
-  background: url('water-background.jpg') no-repeat center;
+  background: url('oceanbackground.jpg') no-repeat center;
   background-size: cover;
 }
 
