--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ background: linear-gradient(-45deg, #0095ff, #6bbfff, #99f3ff, #7dffe5, #8fffe3)
 #aquarium {
   position: relative;
   width: 100%;
-  height: 400px;  /* test sizing */
+  height: cover;  /* test sizing */
   overflow: hidden;
  /*  background: url('oceanbackground.jpg') no-repeat center;
   background-size: cover;*/
