--- a/style.css
+++ b/style.css
@@ -21,8 +21,8 @@ background: linear-gradient(-45deg, #0095ff, #6bbfff, #99f3ff, #7dffe5, #8fffe3)
   width: 100%;
   height: cover;  /* test sizing */
   overflow: hidden;
- /*  background: url('oceanbackground.jpg') no-repeat center;
-  background-size: cover;*/
+ background: url('oceanbackground.jpg') no-repeat center;
+  background-size: cover;
 }
 
 .icon {
