--- a/style.css
+++ b/style.css
@@ -20,6 +20,8 @@ background: linear-gradient(-45deg, #0095ff, #6bbfff, #99f3ff, #7dffe5, #8fffe3)
   position: relative;
   width: 100%;
   height: 600px%;  /* test sizing */
+  overflow: hidden;
+ 
  
 }
 
