--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ background: linear-gradient(-45deg, #0095ff, #6bbfff, #99f3ff, #7dffe5, #8fffe3)
   width: 100%;
   height: 600px%;  /* test sizing */
   overflow: hidden;
+  margin-top: 40%;
  
  
 }
