--- a/style.css
+++ b/style.css
@@ -98,14 +98,17 @@ font-family: "Marker Felt", fantasy;  font-weight: 900;
   bottom: 200px;
 }
 #astraeaTurboSnail{
+   bottom: 1px;
   right: 130px;
   z-index: 10;
 }
 #seaCucumber{
+	bottom: 1px;
 	right: 50px;
 	z-index: 10;
 }
 #serpentSeaStar{
+	bottom: 1px;
 	right: 75px;
 	z-index: 10;
 }
