--- a/style.css
+++ b/style.css
@@ -4,50 +4,37 @@ body.index {
   background-repeat: no-repeat;
   background-size: cover;
 }
+
 .bubbler-one-regular {
   font-family: "Bubbler One", sans-serif;
   font-weight: 400;
-  font-style: normal;
 }
-body.detail{
-  background-color: #c9faff;
-background: linear-gradient(-45deg, #0095ff, #6bbfff, #99f3ff, #7dffe5, #8fffe3);
-	background-size: 400% 400%;
-	animation: gradient 15s ease infinite;
-	height: 100vh;
+
+body.detail {
+  background: linear-gradient(-45deg, #0095ff, #6bbfff, #99f3ff, #7dffe5, #8fffe3);
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
+  height: 100vh;
 }
+
 #aquarium {
   position: relative;
   width: 100%;
-  height: 500px;  /* test sizing */
-  
-  
- 
- 
+  height: 500px;
 }
 
 .icon {
   position: absolute;
   width: 100px;
   height: auto;
+  max-width: 200px;
+  object-fit: contain;
   transition: transform 3s ease-in-out;
   z-index: 20;
 }
-	
 
-@keyframes gradient {
-	0% {
-		background-position: 0% 50%;
-	}
-	50% {
-		background-position: 100% 50%;
-	}
-	100% {
-		background-position: 0% 50%;
-	}
-}
-
-.mainTitle{
+/* titles */
+.mainTitle {
   text-align: center;
   color: white;
   font-family: "Marker Felt", fantasy;
@@ -55,72 +42,39 @@ background: linear-gradient(-45deg, #0095ff, #6bbfff, #99f3ff, #7dffe5, #8fffe3)
   font-size: 50px;
 }
 
-.subTitle{
+.subTitle {
   text-align: center;
   color: white;
-font-family: "Marker Felt", fantasy;  font-weight: 900;
+  font-family: "Marker Felt", fantasy;
+  font-weight: 900;
   font-size: 20px;
 }
 
+/* fish placement */
+#clownFish { left: 7%; top: 10%; }
+#blueTangFish { left: 30%; top: 30%; }
+#yellowTangFish { right: 200px; bottom: 300px; }
+#coralBeautyFish { right: 500px; bottom: 150px; }
+#bicolorFoxfaceFish { right: 400px; top: 100px; }
+#orchidDottybackFish { left: 100px; bottom: 100px; }
+#indigoDottybackFish { right: 120px; bottom: 200px; }
 
-#clownFish{
-  left: 7%;
-  top: 10%;
-}
-#blueTangFish{
-  left: 30%;
-  top: 30%;
-}
-#yellowTangFish{
-  right: 200px;
-  bottom: 300px;
-}
-#coralBeautyFish{
-  right: 500px;
-  bottom: 150px;
-}
-#bicolorFoxfaceFish{
-  right: 400px;
-  top: 100px;
-}
-#orchidDottybackFish{
-  left: 100px;
-  bottom: 100px;
-}
-#indigoDottybackFish{
-  right: 120px;
-  bottom: 200px;
-}
-#astraeaTurboSnail{
-   bottom: 1px;
-  right: 130px;
+/* bottom dwellers */
+#astraeaTurboSnail,
+#seaCucumber,
+#serpentSeaStar,
+#blackLongSpinedUrchin {
+  bottom: 1px;
   z-index: 10;
 }
-#seaCucumber{
-	bottom: 1px;
-	right: 50px;
-	z-index: 10;
-}
-#serpentSeaStar{
-	bottom: 1px;
-	right: 75px;
-	z-index: 10;
-}
-#blueCaribbeanFish{
-  right: 170px;
-  bottom: 250px;
-	
-}
-#disparAnthias{
- right: 160px;
- bottom: 225px;
-}
-#blackLongSpinedUrchin{
-	bottom: 0px;
-	right: 400px;
-	z-index: 10;
-	
-}
+
+#astraeaTurboSnail { right: 130px; }
+#seaCucumber { right: 50px; }
+#serpentSeaStar { right: 75px; }
+#blackLongSpinedUrchin { right: 400px; }
+
+#blueCaribbeanFish { right: 170px; bottom: 250px; }
+#disparAnthias { right: 160px; bottom: 225px; }
 
 body.detail #detailBanner {
     width: 100%;
