--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ body.detail {
 #bicolorFoxfaceFish { right: 400px; top: 100px; }
 #orchidDottybackFish { left: 100px; bottom: 100px; }
 #indigoDottybackFish { right: 120px; bottom: 200px; }
-#SantaFish { right: 350px; top: 200px; }
+#santaFish { right: 350px; top: 200px; }
 
 /* bottom dwellers */
 #astraeaTurboSnail,
