--- a/style.css
+++ b/style.css
@@ -69,10 +69,22 @@ body.index {
 }
 
 body.detail {
-  background: linear-gradient(-45deg, #0095ff, #6bbfff, #99f3ff, #7dffe5, #8fffe3);
+   background: linear-gradient(-45deg,
+      #0095ff,
+      #6bbfff,
+      #99f3ff,
+      #7dffe5,
+      #8fffe3
+  );
   background-size: 400% 400%;
-  animation: gradient 15s ease infinite;
+  animation: gradientShift 18s ease infinite;
   height: 100vh;
+}
+
+@keyframes gradientShift {
+  0% { background-position: 0% 50%; }
+  50% { background-position: 100% 50%; }
+  100% { background-position: 0% 50%; }
 }
 
 #aquarium {
