--- a/style.css
+++ b/style.css
@@ -170,7 +170,7 @@ body.detail #detailBanner {
     top: 8px;
     left: 8px;
     text-decoration: none;
-    color: white;
+    color: orange;
     font-weight: 900;
     font-size: 50px;
     font-family: Arial, Helvetica, sans-serif;
