--- a/style.css
+++ b/style.css
@@ -165,17 +165,7 @@ body.detail #detailBanner {
   font-weight: 900;
   font-size: 50px;
 }
-#backBtn{
-    position: absolute;
-    top: 8px;
-    left: 8px;
-    text-decoration: none;
-    color: orange;
-    font-weight: 900;
-    font-size: 50px;
-    font-family: Arial, Helvetica, sans-serif;
-    
-}
+
 .container{
   position:relative;
   text-align: center;
@@ -283,7 +273,7 @@ p{
     display: inline-block;
     margin-top: 20px;
     text-decoration: none;
-    color: white;
+    color: #FF2400;
     font-weight: bold;
     font-size: 24px;
 }
