--- a/style.css
+++ b/style.css
@@ -273,7 +273,7 @@ p{
     display: inline-block;
     margin-top: 20px;
     text-decoration: none;
-    color: #FF2400;
+    color: red;
     font-weight: bold;
     font-size: 24px;
 }
